// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given there is a case available in blaise for a questionnaire should display the factsheet correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Factsheet"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            This factsheet contains information for case
             
            1
             
            completed by
             
            Rich
          </div>
        </div>
        <dl
          class="ons-metadata ons-metadata__list ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
          style="margin: 2rem 0px 0px 0px;"
          title="Factsheet"
        >
          <dt
            class="ons-metadata__term ons-grid__col ons-col-3@m"
          >
            CaseId:
          </dt>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            1
          </dd>
          <dt
            class="ons-metadata__term ons-grid__col ons-col-3@m"
          >
            Address:
          </dt>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Flat 1
          </dd>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Richmond House
          </dd>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Rice Road
          </dd>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Duffrin
          </dd>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Newport
          </dd>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Gwent
          </dd>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            NZ11 4PD
          </dd>
          <dt
            class="ons-metadata__term ons-grid__col ons-col-3@m"
          >
            Interviewer:
          </dt>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Rich
          </dd>
          <dt
            class="ons-metadata__term ons-grid__col ons-col-3@m"
          >
            Outcome code:
          </dt>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            110
          </dd>
          <dt
            class="ons-metadata__term ons-grid__col ons-col-3@m"
          >
            Household size:
          </dt>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            2
          </dd>
          <dt
            class="ons-metadata__term ons-grid__col ons-col-3@m"
          >
            Respondents:
          </dt>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Richmond Ricecake
             
            Fri Feb 15 1980 00:00:00 GMT+0000 (Greenwich Mean Time)
          </dd>
          <dd
            class="ons-metadata__value ons-grid__col ons-col-9@m"
          >
            Bartholomew Edgar
             
            Sun Jun 11 1995 00:00:00 GMT+0100 (British Summer Time)
          </dd>
        </dl>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Factsheet"
    >
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          This factsheet contains information for case
           
          1
           
          completed by
           
          Rich
        </div>
      </div>
      <dl
        class="ons-metadata ons-metadata__list ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
        style="margin: 2rem 0px 0px 0px;"
        title="Factsheet"
      >
        <dt
          class="ons-metadata__term ons-grid__col ons-col-3@m"
        >
          CaseId:
        </dt>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          1
        </dd>
        <dt
          class="ons-metadata__term ons-grid__col ons-col-3@m"
        >
          Address:
        </dt>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Flat 1
        </dd>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Richmond House
        </dd>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Rice Road
        </dd>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Duffrin
        </dd>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Newport
        </dd>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Gwent
        </dd>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          NZ11 4PD
        </dd>
        <dt
          class="ons-metadata__term ons-grid__col ons-col-3@m"
        >
          Interviewer:
        </dt>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Rich
        </dd>
        <dt
          class="ons-metadata__term ons-grid__col ons-col-3@m"
        >
          Outcome code:
        </dt>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          110
        </dd>
        <dt
          class="ons-metadata__term ons-grid__col ons-col-3@m"
        >
          Household size:
        </dt>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          2
        </dd>
        <dt
          class="ons-metadata__term ons-grid__col ons-col-3@m"
        >
          Respondents:
        </dt>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Richmond Ricecake
           
          Fri Feb 15 1980 00:00:00 GMT+0000 (Greenwich Mean Time)
        </dd>
        <dd
          class="ons-metadata__value ons-grid__col ons-col-9@m"
        >
          Bartholomew Edgar
           
          Sun Jun 11 1995 00:00:00 GMT+0100 (British Summer Time)
        </dd>
      </dl>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there the blaise rest api is not available should render the page correctly when an error occurs 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Factsheet"
      >
        <div
          class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            try again in a few minutes
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Factsheet"
    >
      <div
        class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          try again in a few minutes
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
